fixed layout issues

--- a/news-tracker/src/styles/main.module.scss
+++ b/news-tracker/src/styles/main.module.scss
@@ -13,4 +13,10 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  -ms-overflow-style: none;
 }
