--- a/news-tracker/src/styles/news/news.scss
+++ b/news-tracker/src/styles/news/news.scss
@@ -102,7 +102,7 @@
       align-items: center;
       justify-content: space-between;
       flex-direction: column;
-      height: 100%;
+      height: max-content;
       color: #f3f6f9;
 
       .sideColumnMainNewsBlock {
@@ -163,6 +163,7 @@
       align-items: center;
       color: #f3f6f9;
       display: flex;
+      height: max-content;
 
       .centralNewsBlock {
         display: flex;
@@ -212,7 +213,7 @@
             background: #052c36;
             width: 100%;
             align-items: center;
-            justify-content: center;
+            justify-content: start;
           }
         }
 
@@ -227,7 +228,7 @@
           background: #183656;
           width: 100%;
           align-items: center;
-          justify-content: center;
+          justify-content: start;
         }
       }
     }
